--- a/Conjunta/index.html
+++ b/Conjunta/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div  class="form">
+    <div  class="form-register">
         <br />
         <center>
             <h1>Cuestionario</h1>
@@ -17,23 +17,23 @@
         <form action="" onsubmit="arreglo()" method="post">
             <br />
             <label for="id">ID:</label>
-            <input type="text" name="id" id="id">
+            <input type="text" name="id" id="id" class="controls">
             <br />
             <br />
             <label for="Name">Name:</label>
-            <input type="text" name="Name" id="Name">
+            <input type="text" name="Name" id="Name" class="controls">
             <br />
             <br />
             <label for="Producto">Producto:</label>
-            <input type="text" name="Producto" id="Producto">
+            <input type="text" name="Producto" id="Producto" class="controls">
             <br />
             <br />
             <label for="Precio">Precio:</label>
-            <input type="text" name="Precio" id="Precio">
+            <input type="text" name="Precio" id="Precio" class="controls">
             <br />
             <br />
             <label for="Cantidad">Cantidad:</label>
-            <input type="text" name="Cantidad" id="Cantidad">
+            <input type="text" name="Cantidad" id="Cantidad" class="controls">
             <br />
             <br />
             <center><button type="submit" name="button" id="button">Registrar</button>
