--- a/Conjunta/index.html
+++ b/Conjunta/index.html
@@ -1,47 +1,59 @@
-<!DOCTYPE html>
-<html>
+<!Doctype html>
+<html lang="en">
 
 <head>
-    <title>Cuestionario</title>
-    <link href="css/styles.css" rel="stylesheet">
-    <script src="js/javaScript.js"></script>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>World of Marker</title>
+      <link rel="icon" href="img/icono.png">
+      <link href="./CSS/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div  class="form-register">
-        <br />
-        <center>
-            <h1>Cuestionario</h1>
-        </center>
-        <br />
-        <form action="" onsubmit="arreglo()" method="post">
-            <br />
-            <label for="id">ID:</label>
-            <input type="text" name="id" id="id" class="controls">
-            <br />
-            <br />
-            <label for="Name">Name:</label>
-            <input type="text" name="Name" id="Name" class="controls">
-            <br />
-            <br />
-            <label for="Producto">Producto:</label>
-            <input type="text" name="Producto" id="Producto" class="controls">
-            <br />
-            <br />
-            <label for="Precio">Precio:</label>
-            <input type="text" name="Precio" id="Precio" class="controls">
-            <br />
-            <br />
-            <label for="Cantidad">Cantidad:</label>
-            <input type="text" name="Cantidad" id="Cantidad" class="controls">
-            <br />
-            <br />
-            <center><button type="submit" name="button" id="button">Registrar</button>
-            <button type="reset" name="button" id="button">Borrar</button></center>
-            <br />
-        </form>
-    </div>
+
+      <header>
+            <nav class="navegacion">
+                  <ul class="menu">
+                        <a class="logo" href="index.html"><img src="./IMG/logo.png" width="40" height="40"
+                                    alt="Logo"></a>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="#">PRODUCTS</a></li>
+                        <li><a href="./html/Form1.html">Form1</a></li>
+                        <li><a href="./html/form2.html">Form2</a></li>
+                  </ul>
+            </nav>
+      </header>
+
+
+      <div>
+            <img class="portada" src="./IMG/frontPage.jpg" alt="producto" width="150" height="40">
+      </div>
+
+      <div>
+            <br /><br /><br />
+            <h1>US</h1>
+            <br/>
+            <br/>
+
+            <div>
+                  <h3>MISSION</h3>
+                  <br/>
+                  <p>To be the best in the sale and distribution of markers,</p>
+                  <p>satisfying the needs of our clients, shareholders, employees</p>
+                  <p>and suppliers in the national territory.</p>
+            </div>
+
+            <div>
+                  <h3>VISION</h3>
+                  <br/>
+                  <p>Offer the customer products and services of excellent quality.</p>
+                  <p>Expand the market, making our services known at the regional and national level.</p>
+                  <p>Continuously improve products and services, meeting market demands. Reduce costs, optimal</p>
+                  <p>use of both human and material resources.</p>
+                     
+            </div>
+      </div>
 </body>
+
 </html>
-
-
