--- a/XMLJSON/index.html
+++ b/XMLJSON/index.html
@@ -1,19 +1,50 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<meta charset="utf-8">
+
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>LABORATORIO</title>
+		<meta name="description" content="">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	    <link rel="stylesheet" href="css/bootstrap.min.css">
+	    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	    <link rel="stylesheet" href="css/main.css">
+
 		<style type="text/css">
 			#background{position:absolute; width:99%; height:130%;}
 			#fixed {position:absolute; top: 0px; left: 0px;}
 		</style>
 	</head>
 	<body>
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button class="navbar-toggle" data-toggle="collapse" data-target="#ejemplo-5">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="#" class="navbar-brand">TRABAJO INDIVIDUAL</a>
+				</div>
+				<div class="collapse navbar-collapse" id="ejemplo-5">
+					<ul class="nav navbar-nav">
+						<li><a href="./Respuestas/PREGUNTA_1/index.html">Pregunta 1</a></li>
+						<li><a href="./Respuestas/PREGUNTA_2/index.html">Pregunta 2</a></li>
+						<li><a href="./Respuestas/PREGUNTA_3/index.html">Pregunta 3</a></li>
+						<li><a href="./Respuestas/PREGUNTA_4/index.html">Pregunta 4</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
 		<div>
 			<img id="background" src="Imagenes/fondo.jpg"/> 
 		</div>
+
 		<div id="fixed">
-			</br></br></br>
+			</br></br></br><br><br><br>
 			<div style="padding-left:510px;">
 				<img src="Imagenes/selloespe.jpg" alt="ESPE" height="100" >
 			</div>
