--- a/XMLJSON/Respuestas/PREGUNTA_1/index.html
+++ b/XMLJSON/Respuestas/PREGUNTA_1/index.html
@@ -1,55 +1,98 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Pregunta 1</title>
-		<link rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-			crossorigin="anonymous">
-		<style type="text/css">
-		#background{position:absolute; width:99%; height:130%;}
-		#fixed {position:absolute; top: 0px; left: 0px;}
+
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>PREGUNTA 1</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="../../css/main.css">
+
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<style type="text/css">
+		#background {
+			position: absolute;
+			width: 99%;
+			height: 130%;
+		}
+
+		#fixed {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+		}
 	</style>
-	</head>
-	<body>
-		<div>
-			<img id="background" src="../../Imagenes/fondo.jpg"/>
+</head>
+
+<body>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button class="navbar-toggle" data-toggle="collapse" data-target="#ejemplo-5">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="../../index.html" class="navbar-brand">TRABAJO INDIVIDUAL</a>
+			</div>
+			<div class="collapse navbar-collapse" id="ejemplo-5">
+				<ul class="nav navbar-nav">
+					<li><a href="../PREGUNTA_1/index.html">Pregunta 1</a></li>
+					<li><a href="../PREGUNTA_2/index.html">Pregunta 2</a></li>
+					<li><a href="../PREGUNTA_3/index.html">Pregunta 3</a></li>
+					<li><a href="../PREGUNTA_4/index.html">Pregunta 4</a></li>
+				</ul>
+			</div>
 		</div>
-		<div id="fixed" style="padding-left:30%; padding-top: 10%;">
-			<br>
-			<img src="../../Imagenes/selloespe.jpg" width="65%" align="center">
-			<h1 style="padding-left:25%;">Pregunta 1</h1>
-			<p id="pregunta"> Analizar una cadena de texto en un objeto DOM XML y extraer
-				esa Información con JavaScript</p>
-			<p id="descripcion"> Para este ejercicio se utilizara una cadena de texto
-				sobre animales mamiferos.</p>
-			<p id="p3">Animales:</p>
-			<p style="padding-left:15%;">
-				<button onclick="traermamifero(0);"> Traer animal vivo</button>
-				<button onclick="traermamifero(1);"> Traer animal muerto</button>
-				<button onclick="traermamifero(2);"> Traer animal extinto</button>
-			</p>
-			<p style="padding-left:35%;" id="p1"></p>
-			<br>
-			<button onclick="window.location.href='../../index.html'">Menu principal</button>
-		</div>
+	</nav>
+
+	<div>
+		<img id="background" src="../../Imagenes/fondo.jpg" />
+	</div>
+
+	<div id="fixed" style="padding-left:30%; padding-top: 10%;">
+		<br>
+		<img src="../../Imagenes/selloespe.jpg" width="65%" align="center">
+		<h1 style="padding-left:25%;">Pregunta 1</h1>
+		<p id="pregunta"> Analizar una cadena de texto en un objeto DOM XML y extraer
+			esa Información con JavaScript</p>
+		<p id="descripcion"> Para este ejercicio se utilizara una cadena de texto
+			sobre animales mamiferos.</p>
+		<p id="p3">Animales:</p>
+		<p style="padding-left:15%;">
+			<button onclick="traermamifero(0);"> Traer animal vivo</button>
+			<button onclick="traermamifero(1);"> Traer animal muerto</button>
+			<button onclick="traermamifero(2);"> Traer animal extinto</button>
+		</p>
+		<p style="padding-left:35%;" id="p1"></p>
+		<br>
+		<button onclick="window.location.href='../../index.html'">Menu principal</button>
+	</div>
 
 
-		<script>
+	<script>
 		var parser, xmlDoc;
-	
+
 		//la cadena de texto muestra mamifero, habitad y estado
-		var text = 	
-		"<zoologico><animal><mamifero>Oso</mamifero><habitad>Bosque</habitad><estado>vivo</estado></animal><animal><mamifero>Guacamayo</mamifero><habitad>Arboles</habitad><estado>Muerto</estado></animal><animal><mamifero>Dinosaurio</mamifero><habitad>Tierra</habitad><estado>Extinto</estado></animal></zoologico>";
-		
+		var text =
+			"<zoologico><animal><mamifero>Oso</mamifero><habitad>Bosque</habitad><estado>vivo</estado></animal><animal><mamifero>Guacamayo</mamifero><habitad>Arboles</habitad><estado>Muerto</estado></animal><animal><mamifero>Dinosaurio</mamifero><habitad>Tierra</habitad><estado>Extinto</estado></animal></zoologico>";
+
 		parser = new DOMParser();
 		xmlDoc = parser.parseFromString(text, "text/xml");
 
-		function traermamifero(mamifero){
-			document.getElementById('p1').innerHTML = "Mamifero: " + 
-			xmlDoc.getElementsByTagName('mamifero')[mamifero].childNodes[0].nodeValue;
-        }	
-		
+		function traermamifero(mamifero) {
+			document.getElementById('p1').innerHTML = "Mamifero: " +
+				xmlDoc.getElementsByTagName('mamifero')[mamifero].childNodes[0].nodeValue;
+		}
+
 	</script>
-	</body>
+
+
+</body>
+
 </html>
