--- a/XMLJSON/Respuestas/PREGUNTA_4/index.html
+++ b/XMLJSON/Respuestas/PREGUNTA_4/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>PREGUNTA 4</title>
+		<meta name="description" content="">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-    <title>Pregunta 4</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <style type="text/css">
-        #background {
-            position: absolute;
-            width: 99%;
-            height: 130%;
-        }
-
-        #fixed {
-            position: absolute;
-            top: 0px;
-            left: 0px;
-        }
-    </style>
-</head>
-
-<body>
+	    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+	    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
+	    <link rel="stylesheet" href="../../css/main.css">
+		
+		<link rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+			crossorigin="anonymous">
+		<style type="text/css">
+		#background{position:absolute; width:99%; height:130%;}
+		#fixed {position:absolute; top: 0px; left: 0px;}
+	</style>
+	</head>
+	<body>
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button class="navbar-toggle" data-toggle="collapse" data-target="#ejemplo-5">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="../../index.html" class="navbar-brand">TRABAJO INDIVIDUAL</a>
+				</div>
+				<div class="collapse navbar-collapse" id="ejemplo-5">
+					<ul class="nav navbar-nav">
+						<li><a href="../PREGUNTA_1/index.html">Pregunta 1</a></li>
+						<li><a href="../PREGUNTA_2/index.html">Pregunta 2</a></li>
+						<li><a href="../PREGUNTA_3/index.html">Pregunta 3</a></li>
+						<li><a href="../PREGUNTA_4/index.html">Pregunta 4</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
     <div>
         <img id="background" src="../../Imagenes/fondo.jpg" />
     </div>
@@ -33,12 +53,15 @@
         <p style="padding-left:15%;">
             <button onclick="loadDoc();"> Ver ventas</button>
         </p>
-        <center><table id="demo" border="1" width=800></table></center>
+        <center>
+            <table id="demo" border="1" width=800></table>
+        </center>
         <br>
         <button onclick="window.location.href='../../index.html'">Menu principal</button>
     </div>
 
     <script>
+        
         function loadDoc() {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function () {
@@ -78,6 +101,8 @@
     <script>window.jQuery || document.write('<script src="../../js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="../../js/vendor/bootstrap.min.js"></script>
     <script src="../../js/main.js"></script>
+    <script type="text/javascript" src="js/vendor/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
 
 </body>
 
